# Twain

./: CMakeLists.txt  README.md  auto_download_and_unzip.sh  brew-install-library.sh  run_service.sh  unzip_model.sh  unzip_source.sh
test/src/: test_service.cpp
twain/include/: string_utils.h  twain_command.h  twain_config.h
twain/src/: main.cpp  twain_command.cpp
twain_rabbitmq_service/include/: auto_download_and_unzip.h  twain_amqp_listen.h  twain_amqp_listen_callback.h  twain_message_handle.h  utils.h
twain_rabbitmq_service/src/: auto_download_and_unzip.cpp  twain_amqp_listen.cpp  twain_message_handle.cpp
twain_rest_service/include/: twain_service_api.h
twain_rest_service/src/: twain_service_api.cpp
twain_service/include/: twain_service_config.h
twain_service/src/: twain_service.cpp
